--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,30 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <div class="mt-5 text-center">
-        <h1 class="display-4">Welcome to Flask App</h1>
-        <a class="btn btn-primary" href="{{ url_for('index') }}">Login with Google</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login | LearnMate</title>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div id="header">
+            <div class="navbar">
+                <div class="logo">
+                    <btn>LearnMate</btn>
+                </div>
+            </div>
+        
+        <div class="gif-container">
+            <img src="/static/img/login_gif.gif" alt="LearnMate Gif" id="gif-image">
+        </div>
+        
+        <div class="centered">
+            <form action="{{ url_for('login') }}">
+                <button type="submit">Getting Started</button>
+            </form>
+        </div>
     </div>
-{% endblock %}
+    
+</body>
+</html>
