--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body{
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('/static/img/bg.jpg');
+    background-image: url('/static/img/bg.png');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -83,7 +83,7 @@ btn {
 button {
     background: linear-gradient(135deg, #e44258, #6f48d9);
     color: #fff;
-    padding: 15px 30px;
+    padding: 18px 100px;
     border: none;
     border-radius: 15px;
     font-size: 22px;
