--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Your Website</title>
+    <title>LearnMate Dashboard</title>
     <style>
         html, body {
             overflow: hidden;
@@ -77,7 +77,7 @@
             background: none;
             border: none;
             color: white;
-            font-size: 24px;
+            font-size: 50px;
             cursor: pointer;
         }
     </style>
@@ -85,27 +85,31 @@
 
 <body class="font-sans bg-gray-100">
 
-    <!-- Navbar -->
-    <nav class="bg-gray-800 p-4 text-white">
-        <div class="container mx-auto">
-            <div class="flex justify-between items-center">
-                <div class="text-xl font-bold">Your Logo</div>
-                <!-- Add your navbar links here -->
-                <div class="space-x-4">
-                    <a href="#" class="hover:text-gray-300">Home</a>
-                    <a href="#" class="hover:text-gray-300">About</a>
-                    <a href="#" class="hover:text-gray-300">Services</a>
-                    <a href="#" class="hover:text-gray-300">Contact</a>
+<!-- Navbar -->
+<nav class="bg-gray-800 p-4 text-white">
+    <div class="container mx-auto">
+        <div class="flex justify-between items-center">
+            <div class="text-2xl font-bold">{{ user_entry.college_name | upper }} ({{ user_entry.stream | upper }})</div>
+            <!-- Add your navbar links here -->
+            <div class="flex items-center space-x-4">
+                <div class="card rounded-lg p-2 bg-gray-700">
+                    <a href="#" class="hover:text-gray-300">Hours Spent {{ user_entry.hours_spend }}</a>
                 </div>
+                <div class="card rounded-lg p-2 bg-gray-700">
+                    <a href="#" class="hover:text-gray-300">Rank {{ user_entry.rank }}</a>
+                </div>
+                <img src="{{ user_entry.picture }}" alt="User Picture" class="rounded-full h-8 w-8">
+                <a href="{{ url_for('logout') }}" class="hover:text-gray-300">Logout</a>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <div class="flex-container">
 
         <!-- Left Sidebar -->
         <div class="sidebar">
-            <h2 class="text-lg font-semibold mb-4">Sidebar</h2>
+            <h2 class="text-lg font-semibold mb-4">Course Curriculum</h2>
             <!-- Dropdown 1 -->
             <div class="mb-2">
                 <button class="flex items-center w-full px-2 py-1 rounded-md bg-gray-300 hover:bg-gray-400 focus:outline-none"
